tests/baselines/reference/functionArgShadowing.errors.txt
functionArgShadowing.ts(4,8): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'A', but here has type 'B'.
functionArgShadowing.ts(5,8): error TS2339: Property 'bar' does not exist on type 'A'.
functionArgShadowing.ts(10,7): error TS2403: Subsequent variable declarations must have the same type.  Variable 'p' must be of type 'number', but here has type 'string'.


==== functionArgShadowing.ts (3 errors) ====
    class A { foo() { } }
    class B { bar() { } }
    function foo(x: A) {
       var x: B = new B();
           ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'A', but here has type 'B'.
!!! related TS6203 functionArgShadowing.ts:3:14: 'x' was also declared here.
         x.bar(); // the property bar does not exist on a value of type A
           ~~~
!!! error TS2339: Property 'bar' does not exist on type 'A'.
    }
     
    class C {
    	constructor(public p: number) {
    		var p: string;
    		    ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'p' must be of type 'number', but here has type 'string'.
!!! related TS6203 functionArgShadowing.ts:9:14: 'p' was also declared here.
    
    		var n: number = p;
    	}
    }